tests/types_mut_bad_ref_assign_value.stderr
tests/types_mut_bad_ref_assign_value.sl:57:62: error: type mismatch
