tests/types_mut_bad_ref_assign_value.sl
fn main() i32 {
    var x i32
    var r mut&i32 = &x
    r = 1
    return 0
}
